name:            bloomfilter
version:         1.2.6.8
license:         BSD3
license-file:    LICENSE
author:          Bryan O'Sullivan <bos@serpentine.com>
maintainer:      Bryan O'Sullivan <bos@serpentine.com>
homepage:        http://www.serpentine.com/software/bloomfilter
bug-reports:     http://bitbucket.org/bos/bloomfilter/issues
description:     Pure and impure Bloom Filter implementations.
synopsis:        Pure and impure Bloom Filter implementations.
category:        Data
stability:       provisional
build-type:      Simple
cabal-version:   >= 1.6
extra-source-files: README.markdown cbits/lookup3.c cbits/lookup3.h
                 examples/Makefile examples/SpellChecker.hs examples/Words.hs

library
  build-depends:
    array,
    base       < 5,
    bytestring == 0.9.*,
    deepseq
  if impl(ghc >= 6.10)
    build-depends:
      base >= 4
  exposed-modules:  Data.BloomFilter
                    Data.BloomFilter.Easy
                    Data.BloomFilter.Hash
  other-modules:    Data.BloomFilter.Array
                    Data.BloomFilter.Util
  c-sources:        cbits/lookup3.c
  ghc-options:      -O2 -Wall
  ghc-prof-options: -auto-all
  include-dirs:     cbits
  includes:         lookup3.h
  install-includes: lookup3.h

source-repository head
  type:     mercurial
  location: http://bitbucket.org/bos/bloomfilter
