name:            bloomfilter
version:         1.2.6.9
license:         BSD3
license-file:    LICENSE
author:          Bryan O'Sullivan <bos@serpentine.com>
maintainer:      Bryan O'Sullivan <bos@serpentine.com>
homepage:        https://github.com/bos/bloomfilter
bug-reports:     https://github.com/bos/bloomfilter/issues
description:     Pure and impure Bloom Filter implementations.
synopsis:        Pure and impure Bloom Filter implementations.
category:        Data
stability:       provisional
build-type:      Simple
cabal-version:   >= 1.8
extra-source-files: README.markdown cbits/lookup3.c cbits/lookup3.h
                 examples/Makefile examples/SpellChecker.hs examples/Words.hs

library
  build-depends:
    array,
    base       < 5,
    bytestring == 0.9.*,
    deepseq
  if impl(ghc >= 6.10)
    build-depends:
      base >= 4
  exposed-modules:  Data.BloomFilter
                    Data.BloomFilter.Easy
                    Data.BloomFilter.Hash
  other-modules:    Data.BloomFilter.Array
                    Data.BloomFilter.Util
  c-sources:        cbits/lookup3.c
  ghc-options:      -O2 -Wall
  include-dirs:     cbits
  includes:         lookup3.h
  install-includes: lookup3.h

test-suite tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is:        QC.hs
  other-modules:  QCSupport
  build-depends:
    QuickCheck == 2.4.*,
    base < 5,
    bloomfilter,
    bytestring,
    random,
    test-framework,
    test-framework-quickcheck2
  if impl(ghc >= 6.10)
    build-depends:
      base >= 4

source-repository head
  type:     git
  location: git://github.com/bos/bloomfilter.git

source-repository head
  type:     mercurial
  location: https://bitbucket.org/bos/bloomfilter
